--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,16 @@ body {
 }
 
 h1 {
-  font-family: Arial;
+  font-family: Comic Sans MS;
+
+}
+
+h6 {
+  font-family: Comic Sans MS;
+
+}
+
+h5 {
+  font-family: Verdana;
 
 }
