--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@ h1 {
 
 }
 
-h6 {
+h4 {
   font-family: Comic Sans MS;
 
 }
 
 h5 {
-  font-family: Verdana;
+  font-family: Comic Sans MS;
+
 
 }
