--- a/styles.css
+++ b/styles.css
@@ -10,20 +10,12 @@ h1 {
 
 }
 
-h4 {
+h6 {
   font-family: Comic Sans MS;
 
 }
 
 h5 {
-  font-family: Comic Sans MS;
-
-
-}
-
-h3 {  
-  font-family: Comic Sans MS;
-
+  font-family: Comic Sans MS
 
 }
-<!--Literally added h3 cause i needed to update nbruh-->
